Fixed display of empty character in connection name (no ideal solution; but visible now) Changed appearance of connection name: lighter border color

--- a/public/styles/designer.css
+++ b/public/styles/designer.css
@@ -56,7 +56,7 @@
     opacity: 0.8;
     padding: 0.3em;
     border-radius: 0.5em;
-    border: 1px solid #346789;
+    border: 1px solid #CCC;
     cursor: pointer;
 }
 
